objects/Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Product_Information__c</fullName>
        <description>PCOR Application. Created to hold additional information about the vendor.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approving_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to Capture the Approving Official as the approver.</description>
        <label>Approving Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GAS application.</description>
        <inlineHelpText>Check the box if the Order Request needs to be archived.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <description>PCOR Application. Stores the current approver of the order request.</description>
        <label>Assigned to</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Chief_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Personnel responsible for Approving your Order Request</description>
        <inlineHelpText>Personnel responsible for Approving your Order Request</inlineHelpText>
        <label>Branch Chief Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Chief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GAS Order Management</description>
        <inlineHelpText>Select Approving official</inlineHelpText>
        <label>Branch Chief Official</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>EPA Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>PCOR Application.Created to capture the branch name of the requester.</description>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.Department, Owner:User.Department)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Department name of the requester of the order request.</inlineHelpText>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_chief_pcor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Branch Chief as the approver.</description>
        <label>Branch Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_RequestsxvgZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the cardholder as the approver.</description>
        <label>Card Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <label>Customer Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCN__c</fullName>
        <description>PCOR Application. Created to capture the document control number.</description>
        <inlineHelpText>Enter the document control number.</inlineHelpText>
        <label>DCN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Allocated__c</fullName>
        <description>PCOR Application.Created for the cardholder to capture the dates of the order request.</description>
        <label>Date Allocated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <description>PCOR Application. Created for the cardholder to fill the details for the  dates.</description>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>PCOR Application.Created for the cardholder to capture the dates of the order request.</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Gas</description>
        <inlineHelpText>Potential Delivery Date</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_facilities__c</fullName>
        <description>GAS</description>
        <inlineHelpText>Choose a Building for delivery of GAS Cylinders</inlineHelpText>
        <label>Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HSF</fullName>
                    <color>#0B6FCE</color>
                    <label>Human Studies Facility</label>
                </value>
                <value>
                    <fullName>Page Rd</fullName>
                    <color>#78C953</color>
                    <label>Page Road</label>
                </value>
                <value>
                    <fullName>RTP</fullName>
                    <color>#E27001</color>
                    <label>Research Triangle Park</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deputy_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Deputy Director as the approver.</description>
        <label>Deputy Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Comments to help describe the needs, uses, and etc. of the Order Request</description>
        <inlineHelpText>Comments to help describe the needs, uses, and etc. of the Order Request</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the  Director as the approver.</description>
        <label>Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the  Division Director as the approver.</description>
        <label> Division Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>PCOR Application.Created to capture the division name of the requester.</description>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.Division, Owner:User.Division)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Division name of the requester of the order request.</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_request_require_508_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application. Created to whether 508 approval is necessary for this request.</description>
        <label>Does this request require 508 Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_this_request_require_an_EPA_Decal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application. Created to check if EPA Decal is necessary for this request.</description>
        <label>Does this request require an EPA Decal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPA_Store_Stock_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>EPA Stock Supply - EPA Inventory/Other Agency Inventory.</inlineHelpText>
        <label>EPA Store Stock Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPEAT__c</fullName>
        <description>PCORS 1.5, 12.20.19</description>
        <label>EPEAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPEAT_link__c</fullName>
        <defaultValue>"http://bit.ly/37AiVsB"</defaultValue>
        <description>EPEAT Shortened URL PCORS 1.5,</description>
        <inlineHelpText>To open, Right click &gt; Open in new tab</inlineHelpText>
        <label>EPEAT link (right click to open)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to Capture the FCO as the approver.</description>
        <inlineHelpText>Funds Certifying Officer</inlineHelpText>
        <label>FCO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSS_Federal_Supply_Sources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>FSS - Federal Supply Schedule</inlineHelpText>
        <label>FSS- Federal Supply Sources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilities_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Facilities Reviewer as the approver.</description>
        <label>Facilities Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requestsxvg5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Location__c</fullName>
        <description>GAS</description>
        <inlineHelpText>Choose the specific Delivery/Pick-up Location within the Building</inlineHelpText>
        <label>Delivery/Pick-up Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delivery_facilities__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annex - A045</fullName>
                    <color>#0B6FCE</color>
                    <label>Annex - A045</label>
                </value>
                <value>
                    <fullName>Bldg A - 164 Shop</fullName>
                    <color>#78C953</color>
                    <label>Bldg A - 164 Shop</label>
                </value>
                <value>
                    <fullName>Bldg A - 165</fullName>
                    <color>#E27001</color>
                    <label>Bldg A - 165</label>
                </value>
                <value>
                    <fullName>Bldg A - 280C</fullName>
                    <color>#A845DC</color>
                    <label>Bldg A - 280C</label>
                </value>
                <value>
                    <fullName>Bldg B - 151A</fullName>
                    <color>#F3D904</color>
                    <label>Bldg B - 151A</label>
                </value>
                <value>
                    <fullName>Bldg B - 154</fullName>
                    <color>#A53711</color>
                    <label>Bldg B - 154</label>
                </value>
                <value>
                    <fullName>Bldg B - 175</fullName>
                    <color>#66E9BD</color>
                    <label>Bldg B - 175</label>
                </value>
                <value>
                    <fullName>Bldg B - 251</fullName>
                    <color>#0B24BE</color>
                    <label>Bldg B - 251</label>
                </value>
                <value>
                    <fullName>Bldg B - 254A</fullName>
                    <color>#419249</color>
                    <label>Bldg B - 254A</label>
                </value>
                <value>
                    <fullName>Bldg B - 255 SC</fullName>
                    <color>#B6E32E</color>
                    <label>Bldg B - 255 SC</label>
                </value>
                <value>
                    <fullName>Bldg B - 261A</fullName>
                    <color>#641CCF</color>
                    <label>Bldg B - 261A</label>
                </value>
                <value>
                    <fullName>Bldg B - 261C</fullName>
                    <color>#F96FB7</color>
                    <label>Bldg B - 261C</label>
                </value>
                <value>
                    <fullName>Bldg B - 263A</fullName>
                    <color>#2F5D85</color>
                    <label>Bldg B - 263A</label>
                </value>
                <value>
                    <fullName>Bldg B - 266A</fullName>
                    <color>#AFCADF</color>
                    <label>Bldg B - 266A</label>
                </value>
                <value>
                    <fullName>Bldg B - 266B</fullName>
                    <color>#8F6429</color>
                    <label>Bldg B - 266B</label>
                </value>
                <value>
                    <fullName>Bldg B - 266C</fullName>
                    <color>#EFAE73</color>
                    <label>Bldg B - 266C</label>
                </value>
                <value>
                    <fullName>Bldg B - 275A</fullName>
                    <color>#57F17C</color>
                    <label>Bldg B - 275A</label>
                </value>
                <value>
                    <fullName>Bldg B - 278</fullName>
                    <color>#0B6FCE</color>
                    <label>Bldg B - 278</label>
                </value>
                <value>
                    <fullName>Bldg B - 278C</fullName>
                    <color>#78C953</color>
                    <label>Bldg B - 278C</label>
                </value>
                <value>
                    <fullName>Bldg B - 280</fullName>
                    <color>#E27001</color>
                    <label>Bldg B - 280</label>
                </value>
                <value>
                    <fullName>Bldg B - 280A</fullName>
                    <color>#A845DC</color>
                    <label>Bldg B - 280A</label>
                </value>
                <value>
                    <fullName>Bldg B - 284A</fullName>
                    <color>#F3D904</color>
                    <label>Bldg B - 284A</label>
                </value>
                <value>
                    <fullName>Bldg B - 286A</fullName>
                    <color>#A53711</color>
                    <label>Bldg B - 286A</label>
                </value>
                <value>
                    <fullName>Bldg B - 287A</fullName>
                    <color>#66E9BD</color>
                    <label>Bldg B - 287A</label>
                </value>
                <value>
                    <fullName>Bldg B - 289</fullName>
                    <color>#0B24BE</color>
                    <label>Bldg B - 289</label>
                </value>
                <value>
                    <fullName>Bldg B - 291A</fullName>
                    <color>#419249</color>
                    <label>Bldg B - 291A</label>
                </value>
                <value>
                    <fullName>Bldg B - 299B</fullName>
                    <color>#B6E32E</color>
                    <label>Bldg B - 299B</label>
                </value>
                <value>
                    <fullName>Bldg B - 299C</fullName>
                    <color>#641CCF</color>
                    <label>Bldg B - 299C</label>
                </value>
                <value>
                    <fullName>Bldg B - 352</fullName>
                    <color>#F96FB7</color>
                    <label>Bldg B - 352</label>
                </value>
                <value>
                    <fullName>Bldg B - 353</fullName>
                    <color>#2F5D85</color>
                    <label>Bldg B - 353</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Other__c</fullName>
        <description>Green Purchase Other comments, PCORS 1.5, 12.20.19</description>
        <label>GP Other (Please specify if applicable)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSA_GSA_Advantage_General_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>GSA - GSA Advantage General Services Administration wholesale supply source.</inlineHelpText>
        <label>GSA/GSA Advantage General Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCORS 1.5, 12.20.19</description>
        <label>Green Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Reviewerser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Health &amp; Safety Reviewer as the approver.</description>
        <label>Health &amp; Safety Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_RequestsxvgF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Human_Resource_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the HR official as the approver.</description>
        <label>Human Resource Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requestsxvf7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the IMO as the approver.</description>
        <inlineHelpText>Information Management Officer</inlineHelpText>
        <label>IMO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_RequestsxvfW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to Capture the IT Official as the approver.</description>
        <label>IMO/IT  Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>International_Addresses_Text__c</fullName>
        <description>PCOR Application.</description>
        <label>International Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.</description>
        <label>International Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_PR_for_training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application. Created to check if this order request is for training.</description>
        <label>Is this PR for training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JWOD_Programs_NB_NISH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>JWOD Programs &amp; NB/NISH -  National Industries for Blind/Severly Handicapped</inlineHelpText>
        <label>JWOD Programs &amp; NB/NISH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>PCOR Application.Created to capture the Justification of the order request.</description>
        <inlineHelpText>Comments to help describe the needs, uses, and etc. of the Order Request</inlineHelpText>
        <label>Justification/Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_of_IMO__c</fullName>
        <defaultValue>"http://bit.ly/2ZIcQY4"</defaultValue>
        <description>List of IMO's, PCORS 1.5, 12.20.19</description>
        <inlineHelpText>To open, Right click &gt; Open in new tab</inlineHelpText>
        <label>List of IMOs (right click to open)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mandatory_Source_EPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>Mandatory Source EPA - Office  Supplies BPA(s)</inlineHelpText>
        <label>Mandatory Source EPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <defaultValue>"PCORS v1.5.1 (page reference in user guide)" &amp; BR() &amp;
"- Added Green Purchase fields (pg. 5)" &amp; BR() &amp;
"- Added IMO links (pg. 6)" &amp; BR() &amp;
"- Auto-create Tax/Shipping Line items (pg. 7)" &amp; BR() &amp;
"- SAM check is required (pg. 8)" &amp; BR() &amp;
"- Updates to page layout" &amp; BR() &amp;
"- Updated validation rules"</defaultValue>
        <description>PCORS 1.5.1, Displays PCORS messages</description>
        <inlineHelpText>PCORS 1.5.1, Displays PCORS messages</inlineHelpText>
        <label>Messages</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Lab__c</fullName>
        <description>PCOR Application.Created to capture the office name of the requester.</description>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.CompanyName , Owner:User.CompanyName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Organization name of the requester of the order request</inlineHelpText>
        <label>Office/Lab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request_Total__c</fullName>
        <inlineHelpText>Total amount of the order request.</inlineHelpText>
        <label>Order Request Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Printing_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Printing Reviewerofficial as the approver.</description>
        <label>Printing Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requestsxvfl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the Property Official as the approver.</description>
        <label>Property Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR . Created to capture the input from the user that the request is completed</description>
        <inlineHelpText>Check ‘Request Completed’ after requested items have been purchased and received.</inlineHelpText>
        <label>Request Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>PCOR Application.Created to capture the current state of the order request.</description>
        <inlineHelpText>Current Status of the purchase order request.</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Funding</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>Approved - Ready to Order</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>PCOR Application. Created to capture the request type of the order request.</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Purchase</fullName>
                </value>
                <value>
                    <fullName>Facilities Purchase</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Safety Related Purchase</fullName>
                </value>
                <value>
                    <fullName>IT/E&amp;IT Purchase</fullName>
                </value>
                <value>
                    <fullName>Paid Advertisement for Personnel Recruitment Purchase</fullName>
                </value>
                <value>
                    <fullName>Protective Services &amp; Equipment Purchase</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Close Scrutiny Purchases</fullName>
                </value>
                <value>
                    <fullName>Training less than $3,500 Purchase</fullName>
                    <isActive>false</isActive>
                    <label>Training less than $3,500 Purchase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Org__c</fullName>
        <description>GAS Order Management</description>
        <formula>Owner:User.Department</formula>
        <inlineHelpText>Requester Name typically the user who logged in and placing an order</inlineHelpText>
        <label>Requester Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.FirstName + " " + Unauthenticated_Owner__r.LastName, Owner:User.FirstName + " " + Owner:User.LastName)</formula>
        <label>Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAMS_Check_Date__c</fullName>
        <inlineHelpText>Select the date when the SAMS check occurred.</inlineHelpText>
        <label>SAMS Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAM_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application. Created to capture the system award management confirmation.</description>
        <label>SAM Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>PCOR Application.Created to capture the Shipping city.</description>
        <label>Shipping City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Name__c</fullName>
        <description>PCOR Application. Created to capture the shipping name.</description>
        <label>Shipping Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <description>PCOR Application.Created to capture the shipping phone number of the requester of the order  request</description>
        <label>Shipping Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <description>PCOR Application.Created to capture the Sate of the order request.</description>
        <inlineHelpText>Select the State abbreviation(Example: For Virginia select VA)</inlineHelpText>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <description>PCOR Application.Created to capture the shipping street.</description>
        <label>Shipping Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <description>PCOR application. Created to capture the Shipping Zip/Postal Code</description>
        <label>Shipping Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sole_Source_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCOR Application.Created to capture the mandatory sources.</description>
        <inlineHelpText>Sole Source Purchase -Registration,Training,Journal Article/Reprints,Advertisement(s))</inlineHelpText>
        <label>Sole Source Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Funding_Justification__c</fullName>
        <description>PCOR application. Created to capture the Split Funding Justification of the order request</description>
        <label>Information for FCO</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Current state of the Order Request</description>
        <inlineHelpText>Current state of the Order Request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Order</fullName>
                    <default>true</default>
                    <label>New Order</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>Partial Order Received</fullName>
                </value>
                <value>
                    <fullName>Full Order Received</fullName>
                </value>
                <value>
                    <fullName>Order Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Purchase_Order_Request__c</fullName>
        <defaultValue>"mailto:BAP_PCORS_SUPPORT@epa.gov"</defaultValue>
        <description>PCOR Application. Created for the support field in the form header in type 1 interface.</description>
        <label>Support Purchase Order Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>PCOR Application.Created to capture the title of the order request</description>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_1_Owner_Email__c</fullName>
        <description>PCOR Application. Created to capture the type1 owner  email.</description>
        <formula>Unauthenticated_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type 1 owner email.</inlineHelpText>
        <label>Type-1 Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unauthenticated_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to capture the unautheticated owner</description>
        <label>Type-1 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>